improve comparing documents

--- a/pokemonbean/resources_pk/rom/web/html/moves/effects/effswitchabilities.html
+++ b/pokemonbean/resources_pk/rom/web/html/moves/effects/effswitchabilities.html
@@ -22,7 +22,7 @@
 			<c:if condition="giveConst()">
 				<c:if condition="isDefAbility()">
 					<c:message value="msg_effswitchabilities,give_const">
-						<param value="getTrAbility(^class(&quot;$long&quot;,index))"/>
+						<param value="getTrAbility($class(&quot;$long&quot;,index))"/>
 						<param value="index"/>
 					</c:message>
 				</c:if>
