--- a/belote/resources_cards/classes/en/cards/belote/detailsresults.html
+++ b/belote/resources_cards/classes/en/cards/belote/detailsresults.html
@@ -6,19 +6,19 @@
 <body>
 	<h1>Details of declaring</h1>
 	<ul>
-		<c:for var="p" list="declaring" className='cards.belote.beans.SumDeclaringPlayer'>
+		<c:for var="p" list="getDeclaring()" className='cards.belote.beans.SumDeclaringPlayer'>
 			<li>
-				{p;nickname}''s declaring ({p;statut}):
-				<c:if condition="p;declaring.isEmpty()">
+				{p;getNickname()}''s declaring ({p;getStatut()}):
+				<c:if condition="p;getDeclaring().isEmpty()">
 					No thing
 				</c:if>
-				<c:if condition="!p;declaring.isEmpty()">
+				<c:if condition="!p;getDeclaring().isEmpty()">
 					<br/>
 					<ul>
-						<c:for var="d" list="p;declaring" className='cards.belote.beans.DeclaringPlayerValue'>
-							<li>{d;declaring} : {d;value}</li>
+						<c:for var="d" list="p;getDeclaring()" className='cards.belote.beans.DeclaringPlayerValue'>
+							<li>{d;getDeclaring()} : {d;getValue()}</li>
 						</c:for>
-						<li>Sum : {p;sum}</li>
+						<li>Sum : {p;getSum()}</li>
 					</ul>
 				</c:if>
 			</li>
