--- a/belote/resources_cards/classes/fr/cards/belote/results.html
+++ b/belote/resources_cards/classes/fr/cards/belote/results.html
@@ -96,7 +96,7 @@
 		<thead>
 			<tr>
 				<td></td>
-				<c:for var="p" list="nicknames">
+				<c:for var="p" list="getNicknames()">
 					<td>{p;}</td>
 				</c:for>
 			</tr>
