--- a/pokemonbean/resources_pk/rom/web/html/map/elements/trainer_one_fight.html
+++ b/pokemonbean/resources_pk/rom/web/html/map/elements/trainer_one_fight.html
@@ -31,7 +31,7 @@
 			</c:package>
 		</c:import>
 		<c:if condition="!move.isEmpty()">
-			<a c:command="$clickMove">{getMove()}</a>
+			<a c:command="$clickMove">{getTrMove()}</a>
 		</c:if>
 	</body>
 </html>
