--- a/pokemonbean/resources_pk/rom/web_fight/html/fightdetail.html
+++ b/pokemonbean/resources_pk/rom/web_fight/html/fightdetail.html
@@ -20,7 +20,7 @@
 				{m;}<br/>
 				<ul>
 					<c:for list="f;" var="p">
-						<li>{getFighter(m;;,p;;)}</li>
+						<li>{getFighterWildFight(m;;,p;;)}</li>
 					</c:for>
 				</ul>
 			</c:for>
