--- a/pokemonbean/resources_pk/rom/web/html/endround/multirelation.html
+++ b/pokemonbean/resources_pk/rom/web/html/endround/multirelation.html
@@ -23,7 +23,7 @@
 					<tbody>
 						<c:for key="s" map="damageByStatus" value="r">
 							<tr>
-								<td><a c:command="$clickStatus({index},{s;;})" href="">{getTrStatus(s;;)}</a></td>
+								<td><a c:command="$clickDamageStatus({index},{s;;})" href="">{getTrDamageStatus(s;;)}</a></td>
 								<td>{r;}</td>
 							</tr>
 						</c:for>
