--- a/pokemonbean/resources_pk/rom/web/html/map/elements/trainer_multi_fight.html
+++ b/pokemonbean/resources_pk/rom/web/html/map/elements/trainer_multi_fight.html
@@ -16,13 +16,13 @@
 		<br/>
 		<c:img src="{imageMini}"/>
 		<br/>
-		<c:for list="getTeamsRewards()" var="t">
+		<c:for list="getTeamsRewards()" var="t" indexclassName="$int">
 			{t;;}<br/>
 			<c:import page="{pageTeam}">
 				<c:package name="aiki.beans.map.pokemon">
 					<c:class name="PokemonTeamBean">
 						<c:field name="trainer" value="trainer"/>
-						<c:field name="noFight" value="t;;intValue()"/>
+						<c:field name="noFight" value="t;;"/>
 					</c:class>
 				</c:package>
 			</c:import>
